# semiosis

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  debug_ollama.py  pyproject.toml  quick_debug.py  setup.cfg  test_ollama.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_integration.md  bug_report.md  config.yml  environment_request.md  feature_request.md  research_question.md
.github/workflows/: test.yml
examples/: dbt_context_example.py
semiosis/: __init__.py
semiosis/agents/: anthropic_agent.py  base.py  mock_agent.py  ollama_agent.py  together_agent.py
semiosis/cli/: factories.py  main.py
semiosis/contexts/: README.md  __init__.py  base.py  interventions.py  mock_context.py  protocol.py
semiosis/contexts/providers/: __init__.py  dbt_context.py
semiosis/environments/: base.py  mock_environment.py  text_to_sql.py
semiosis/evaluation/: runner.py
semiosis/interventions/: base.py
semiosis/sit/: engine.py  math_utils.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_cli.py  test_evaluation.py  test_sit_engine.py
tests/agents/: __init__.py  test_agent_factory.py  test_ollama_agent.py  test_together_agent.py
tests/contexts/: test_dbt_context.py  test_protocol.py
